cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/first/first.cpp

#include "lib_header.h"

int main202433_First() {
   return pGlobal202433->field1; 
}
